// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocationReducer() - maintains address bar pathname state and current + previous matched location-aware actions 1`] = `
Object {
  "backNext": true,
  "hasSSR": undefined,
  "history": Object {
    "entries": Array [
      "/first",
      "/second/bar",
    ],
    "index": 1,
    "length": 2,
  },
  "load": true,
  "pathname": "/second/bar",
  "payload": Object {
    "param": "bar",
  },
  "prev": Object {
    "pathname": "/first",
    "payload": Object {},
    "type": "FIRST",
  },
  "redirect": undefined,
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "SECOND",
}
`;

exports[`getInitialState() returns state.history === undefined when using createBrowserHistory 1`] = `
Object {
  "backNext": undefined,
  "hasSSR": undefined,
  "history": undefined,
  "load": undefined,
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "redirect": undefined,
  "routesMap": Object {
    "FIRST": "/first",
  },
  "type": "FIRST",
}
`;
